# engine99

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  docsforge.yaml  main.c  old.appveyor.yml
.github/workflows/: cmake.yml
core/include/: config_mathc.h  core_components.h  core_components_structures.h  events.h  globals.h  stages.h  window.h
core/src/: core_components.c  events.c  globals.c  stages.c  window.c
game/include/: config.h  example.h  game.h
game/shaders/: example_shader.frag  example_shader.vert
game/src/: example.c  game.c
graphics/include/: graphics.h  graphics_components.h  graphics_components_structs.h  light.h  models.h  simple_meshes.h
graphics/src/: graphics.c  graphics_components.c  light.c  models.c  simple_meshes.c
physics/include/: physics.h
shaders/: example_shader.frag  pbr.vert  test_shader.frag  test_shader.vert
